# code-connect

./: .codeconnect.example.toml  .codeconnect.toml  .gitignore  .mcp.example.json  CLAUDE.md  Cargo.toml  README.md
.claude/sessions/: dadd20b6-7b9b-4e01-b96c-e9a0381a8da4.jsonl
.claude/sessions/dadd20b6-7b9b-4e01-b96c-e9a0381a8da4/subagents/: agent-a00b82462a478c23f.jsonl  agent-a013d636740f6d703.jsonl  agent-a01717adbdc0b1f65.jsonl  agent-a073775bc3a727573.jsonl  agent-a073775bc3a727573.meta.json  agent-a08d6343e6e9068aa.jsonl  agent-a08d6343e6e9068aa.meta.json  agent-a0a06b44e3ef28b78.jsonl  agent-a0a06b44e3ef28b78.meta.json  agent-a0a09d83532f2053b.jsonl  agent-a0a9c57b62639130d.jsonl  agent-a13096c20dd42fe10.jsonl  agent-a13c8a505f8d04ad2.jsonl  agent-a13c8a505f8d04ad2.meta.json  agent-a19ba95f4da36088e.jsonl  agent-a1d3e135c9834fa73.jsonl  agent-a1ea1fc9daa7958d6.jsonl  agent-a1ea1fc9daa7958d6.meta.json  agent-a22653a9932ac4d34.jsonl  agent-a270e76923b78b2ff.jsonl  agent-a270e76923b78b2ff.meta.json  agent-a2da8057085663a1c.jsonl  agent-a3db4bd35865281bc.jsonl  agent-a4101dea3f2fbb81a.jsonl  agent-a4101dea3f2fbb81a.meta.json  agent-a4a24ad9109a9a747.jsonl  agent-a4a24ad9109a9a747.meta.json  agent-a4d4aff1cba7e5bfd.jsonl  agent-a53ee4727d372539e.jsonl  agent-a53ee4727d372539e.meta.json  agent-a57ae24b53cce962a.jsonl  agent-a5f832cbb76616cde.jsonl  agent-a609ff118ee5627ef.jsonl  agent-a609ff118ee5627ef.meta.json  agent-a638315f82af399f6.jsonl  agent-a6593ae02e87272da.jsonl  agent-a68feab0d959e76a1.jsonl  agent-a6a441efa7714054c.jsonl  agent-a6a82f53264c7689a.jsonl  agent-a6b1e1a9968bcc43a.jsonl  (+36 more)
.claude/sessions/dadd20b6-7b9b-4e01-b96c-e9a0381a8da4/tool-results/: btt3jo5g0.txt
.github/workflows/: release.yml
benches/: Cargo.toml  index_bench.rs
benches/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: analyze.rs  call_graph.rs  index.rs  mod.rs  references.rs  search.rs  serve.rs  setup.rs  status.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  response.rs  symbol_id.rs  types.rs
crates/diff/: Cargo.toml
crates/diff/src/: branch_diff.rs  lib.rs  symbol_diff.rs
crates/graph/: Cargo.toml
crates/graph/src/: cache.rs  call_graph.rs  cycle_detect.rs  dep_graph.rs  lib.rs  metrics.rs  type_hierarchy.rs
crates/index/: Cargo.toml
crates/index/src/: full_indexer.rs  incremental.rs  lib.rs  query_engine.rs  sled_store.rs  tantivy_index.rs
crates/index/tests/: integration_test.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  schemas.rs  server.rs  tools.rs
crates/parser/: Cargo.toml
crates/parser/src/: c.rs  cpp.rs  csharp.rs  factory.rs  import_resolver.rs  java.rs  javascript.rs  lib.rs  query_loader.rs  rust.rs  trait.rs  typescript.rs
crates/services/: Cargo.toml
crates/services/src/: arch_query.rs  call_analyzer.rs  deadcode.rs  impact_analyzer.rs  lib.rs  metrics.rs  semantic_search.rs  symbol_service.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: filter.rs  lib.rs  watcher.rs
docs/: mcp-setup.md
queries/c/: calls.scm  imports.scm  symbols.scm
queries/cpp/: symbols.scm
queries/csharp/: calls.scm  imports.scm  symbols.scm
queries/java/: calls.scm  imports.scm  symbols.scm
queries/javascript/: calls.scm  imports.scm  symbols.scm
queries/kotlin/: calls.scm  imports.scm  symbols.scm
queries/rust/: calls.scm  imports.scm  symbols.scm
queries/typescript/: imports.scm  symbols.scm
skills/code-connect/: SKILL.md
tests/fixtures/java_sample/src/com/sample/: AuthException.java  AuthService.java  DefaultAuthService.java  Main.java  User.java  UserRepository.java
tests/fixtures/rust_sample/: Cargo.toml
tests/fixtures/rust_sample/src/: lib.rs  main.rs
tests/fixtures/ts_sample/: package.json
tests/fixtures/ts_sample/src/: auth.ts  main.ts
tests/integration/: index_test.rs  mcp_test.rs  mod.rs
