[package]
name = "codeconnect-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CodeConnect 核心类型、符号ID、配置、错误处理、统一响应格式"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
hex = "0.4"
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v4"] }
