[package]
name = "codeconnect-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Diff 感知模块：Git 分支对比、符号级变更分析"

[dependencies]
codeconnect-core = { path = "../core" }
codeconnect-parser = { path = "../parser" }

git2.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
