[package]
name = "codeconnect-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "索引引擎：tantivy 全文搜索 + sled K/V 存储 + 并行索引"

[dependencies]
codeconnect-core = { path = "../core" }
codeconnect-parser = { path = "../parser" }
codeconnect-watcher = { path = "../watcher" }

tantivy.workspace = true
sled.workspace = true

blake3.workspace = true
rayon.workspace = true
crossbeam.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
