[package]
name = "codeconnect-services"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "业务逻辑服务层：符号查找、调用分析、语义搜索、影响分析、架构查询、指标"

[dependencies]
codeconnect-core = { path = "../core" }
codeconnect-index = { path = "../index" }
codeconnect-graph = { path = "../graph" }

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
